# poolio

./: .gitignore  .markdownlint.jsonc  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: _base-reviewer.md  code-quality-reviewer-cpp.md  code-quality-reviewer.md  documentation-accuracy-reviewer.md  gemini-review.md  gemini-reviewer.md  performance-reviewer-cpp.md  performance-reviewer.md  security-code-reviewer-cpp.md  security-code-reviewer.md  test-coverage-reviewer.md
.claude/commands/: architecture.md  create-architecture-v2.md  create-architecture.md  create-git-issues.md  create-implementation-plan.md  fix-review-cpp.md  fix-review.md  gemini-eval.md  gemini-review.md  implement-issue-cpp.md  implement-issue.md  merge-pr.md  review-pr-cpp.md  review-pr.md  run-device-tests.md  run-tests-cpp.md
.claude/memories/: github-cli-pr-comments.md  review-issue-matrix.md
.claude/references/: kent-beck-principles.md
.github/workflows/: ci.yml  circuitpython.yml  cpp.yml  markdown.yml  nodejs.yml
circuitpython/: deploy.py
circuitpython/requirements/: base.txt  display-node.txt  pool-node.txt  test.txt  valve-node.txt
code_reviews/PR101-feat-add-pool-node-cpp-project-structure/: PR101-CONSOLIDATED-REVIEW.md  (+7 more)
docs/: architecture.md  display-node-ui-design.md  gemini-setup.md  implementation-plan.md  implementation-plan.test-preview.md  pre-implementation-review-1.md  pre-implementation-review-2.md  requirements-traceability.md  requirements.md  to-do.md
pool_node_cpp/: platformio.ini
scripts/: adafruit_io_setup.py  serial_monitor.py
tests/: __init__.py
(+197 files in other folders)
